assets/style.css
/* ... */
.text-sc-text-2 {
  font-size: var(--text-sc-text-2);
  line-height: var(--leading-sc-text-2);
}

.text-sc-text-4 {
  font-size: var(--text-sc-text-4);
  line-height: var(--leading-sc-text-4);
}

.text-sc-text-5 {
  font-size: var(--text-sc-text-5);
  line-height: var(--leading-sc-text-5);
}

.text-sc-text-6 {
  font-size: var(--text-sc-text-6);
  line-height: var(--leading-sc-text-6);
}

.fit_screen {
  /* 100% screen size, minus header */
  min-height: calc(100vh - 68px);
}

/* Hack to scroll to the right element on target */
:target::before {
  content: '';
  display: block;
  height: 75px;
  margin-top: -75px;
}


/* Fix table on mobile */
@media screen and (max-width: 768px) {
  table {
    display: block !important;
    max-width: 95vw !important;
    overflow-x: auto !important;
    white-space: nowrap !important;
  }
}

article h2 {
  color: var(--color-sc-gray-1);
  font-size: var(--text-sc-title-2);
  line-height: var(--leading-sc-title-2);
  letter-spacing: var(--tracking-sc-title-2);
  font-weight: var(--font-weight-bold, 700);
  margin-bottom: 1rem;
  margin-top: 1.5rem;
}

article h3 {
  color: var(--color-sc-gray-1);
  font-size: var(--text-sc-title-3);
  line-height: var(--leading-sc-title-3);
  letter-spacing: var(--tracking-sc-title-3);
  font-weight: var(--font-weight-bold, 700);
  margin-bottom: 0.75rem;
  margin-top: 1.25rem;
}

article h4 {
  color: var(--color-sc-gray-1);
  font-size: var(--text-sc-title-4);
  line-height: var(--leading-sc-title-4);
  letter-spacing: var(--tracking-sc-title-4);
  font-weight: var(--font-weight-bold, 700);
  margin-bottom: 1rem;
  margin-top: 1.5rem;
}

article h5 {
  color: var(--color-sc-gray-1);
  font-size: var(--text-sc-title-5);
  line-height: var(--leading-sc-title-5);
  letter-spacing: var(--tracking-sc-title-5);
  font-weight: var(--font-weight-bold, 700);
  margin-bottom: 1rem;
  margin-top: 1.5rem;
}

article p {
  color: var(--color-sc-gray-2);
  margin-bottom: 0.5rem;
}

article li {
  margin-bottom: 0.75rem;
}

article ul {
  margin-bottom: 0.5rem;
  margin-top: 0.5rem;
}

article a {
  text-decoration: underline;
  color: var(--color-sc-gray-1);
  transition: color 0.2s;
}

article a:hover {
  color: var(--color-sc-blue-1);
}

div.toc ul ul {
  margin-left: 1rem;
}

div.toc li {
  font-size: var(--text-sc-text-2);
  line-height: var(--leading-sc-text-2);
  padding-top: 0.25rem;
  padding-bottom: 0.25rem;
}

article hr {
  border-color: var(--color-sc-gray-3);
}

article ul {
  list-style: none;
}

article ul:not(.list-unstyled)>li {
  position: relative;
  padding-left: 1.5em;
}

article ul:not(.list-unstyled)>li:before {
  content: "";
  position: absolute;
  border-radius: 50%;
  width: 0.4em;
  height: 0.4em;
  top: 10px;
  left: 0.25em;
  background-color: var(--color-sc-blue-1);
}

article ol {
  list-style: list-outside;
}

article ol li {
  margin-left: 2rem;
  padding-left: 0.625rem;
}

/* Fix margin on mobile */
@media screen and (max-width: 768px) {
  article ol li {
    margin-left: 1.2rem;
    padding-left: .3rem;
  }
}

article ol>li::marker {
  color: #183BEE;
  font-weight: bold;
}

article ol ul li {
    margin-left: 0;
}

article aside.note {
  border: 1px solid var(--color-sc-purple-1);
  background-color: var(--color-sc-purple-3);
  color: var(--color-sc-purple-1);
  background-repeat: no-repeat;
  background-image: url('data:image/svg+xml, <svg width="16" height="16" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg"><g><path d="M3.67205 17.4954C3.60005 17.4954 3.52805 17.4594 3.45605 17.4234C3.34805 17.3514 3.27605 17.1714 3.31205 17.0274L4.89605 11.1234L0.144045 7.27138C4.50257e-05 7.19938 -0.035955 7.01938 4.50201e-05 6.87538C0.036045 6.73138 0.180045 6.62337 0.324045 6.62337L6.44405 6.29938L8.64005 0.575375C8.71205 0.467375 8.85605 0.359375 9.00005 0.359375C9.14405 0.359375 9.28805 0.467375 9.32405 0.575375L11.52 6.29938L17.64 6.62337C17.784 6.62337 17.928 6.73138 17.964 6.87538C18 7.01938 17.964 7.16338 17.856 7.27138L13.104 11.1234L14.688 17.0274C14.724 17.1714 14.688 17.3154 14.544 17.4234C14.436 17.4954 14.256 17.5314 14.148 17.4234L9.00005 14.1114L3.85205 17.4234C3.78005 17.4954 3.74405 17.4954 3.67205 17.4954Z" fill="%238055FF" /></g><defs><clipPath id="clip0_4076_10748"><rect width="18" height="18" fill="white" /></clipPath></defs></svg>');
  background-position: left 1.5rem top 1.75rem;
  padding: 1.5rem;
  padding-left: 4rem;
  margin-top: 2rem;
  margin-bottom: 2rem;
  gap: 1rem;

}

article aside.note p,
article aside.note ul,
article aside.note ol {
  color: var(--color-sc-purple-1);
}

article aside.note li::before {
  background-color: rgb(128, 85, 255);
}

article aside svg {
  flex: none;
}

article aside.note a {
  color: var(--color-sc-purple-1);
  font-weight: var(--font-weight-bold, 700);
}

article aside.note code.language-plaintext {
  background-color: var(--color-sc-purple-2);
  color: var(--color-sc-purple-1);
}
/* ... */

